# transformer-catalog

./: .gitignore  README.md  install_env.sh  pyproject.toml  requirements.txt  transformer.code-workspace
catalog_tfm/: __init__.py  data.py  model.py  train.py
scripts/: train_and_visualize.ipynb
scripts/fixtures/: minimal_catalog.csv
